# gameprototype

./: .gitignore  README.md  TODO  TODO.txt  projektbeschreibung.odt
Austausch/: collision.xcf  fuelupgrades.txt  waypoints_philip.txt
Austausch/media/materials/scripts/: Oildrum-ref.material  Opponent.material  PerPixel.cg  PerPixel.material  car.material  city.material  cityMat.material  colors.material  groundMat.material  hudImages.material  redBlockMat.material  redBlockMaterial.material  skymat.material
Austausch/media/models/: boundingBox.mesh  oildrum.mesh  opponent.mesh
Austausch/media/overlays/: clock.overlay  fuel.overlay  gameover.overlay  map.overlay  opponentcount.overlay  player.overlay
sources/: AStar.cpp  AStar.h  BaseApplication.cpp  BaseApplication.h  CMakeLists.txt  CMakeLists.txt~  DebugDrawer.cpp  DebugDrawer.h  FuelUpgrade.cpp  FuelUpgrade.h  GameMapObject.cpp  GameMapObject.h  GameMovableObject.cpp  GameMovableObject.h  GameObject.cpp  GameObject.h  GameOverlayManager.cpp  GameOverlayManager.h  Graph.cpp  Graph.h  GraphicManager.cpp  GraphicManager.h  InputManager.cpp  InputManager.h  Keyboard.cpp  Keyboard.h  Map.cpp  Map.h  MeshStrider.cpp  MeshStrider.h  MotionState.cpp  MotionState.h  Opponent.cpp  Opponent.h  PhysicsManager.cpp  PhysicsManager.h  Player.cpp  Player.h  PlayerInput.cpp  PlayerInput.h  (+11 more)
